Fixing: Black background behind Avatar

--- a/src/layouts/home-page-layout/home-page.css
+++ b/src/layouts/home-page-layout/home-page.css
@@ -154,7 +154,7 @@ div.avatar-container {
 div.avatar-container img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   transition: transform 0.3s ease;
   user-select: none;
   -webkit-user-select: none;
